fixed image width to resolve overflow

--- a/_sass/fellow.scss
+++ b/_sass/fellow.scss
@@ -13,8 +13,8 @@
             display: block;
             margin: 0 auto;
     
-            width: 400px;
-            height: 400px;
+            width: 290px;
+            height: 290px;
             background: #fff;
             border-radius: 50%;
             z-index: 2;
@@ -28,13 +28,13 @@
               border-radius: 50%;
               opacity: 1;
               transition: all 1s;
-              width: 100%;
-              height: 100%;
+              width: 290px;
+                height: 290px;
             }
           }
         .spinner {
-            width: 400px;
-            height: 400px;
+            width: 290px;
+            height: 290px;
             position: relative;
 
             &:hover{
@@ -46,8 +46,8 @@
         }
         .inner-spin {
             position: absolute;
-            width: 400px;
-            height: 400px;
+            width: 290px;
+            height: 290px;
             border: 6px solid #1953a1;
             border-right-color: #f9ba29;
             border-bottom-color: #f9ba29;
